--- a/WP.Utillities/WP.Utillities.csproj
+++ b/WP.Utillities/WP.Utillities.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Exceptions\ResultNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LogManager.cs" />
     <Compile Include="Utilities\RoleBasedAuthentication.cs" />
