--- a/WP.Repository/WP.Repository.csproj
+++ b/WP.Repository/WP.Repository.csproj
@@ -90,11 +90,15 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Classes\AuthRepository.cs" />
+    <Compile Include="Classes\BlogRepository.cs" />
+    <Compile Include="Classes\Misc\MiscRepository.cs" />
     <Compile Include="Classes\PagesRepository.cs" />
     <Compile Include="Classes\PostsRepository.cs" />
     <Compile Include="Interfaces\IAuthRepository.cs" />
+    <Compile Include="Interfaces\IBlogRepository.cs" />
     <Compile Include="Interfaces\IPagesRepository.cs" />
     <Compile Include="Interfaces\IPostsRepository.cs" />
+    <Compile Include="Interfaces\Misc\IMiscRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
