--- a/WP.Model/WP.Model.csproj
+++ b/WP.Model/WP.Model.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Models\PostsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LogManagerModel.cs" />
+    <Compile Include="Utilities\MiscModel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
