--- a/WP.Utillities/WP.Utillities.csproj
+++ b/WP.Utillities/WP.Utillities.csproj
@@ -80,7 +80,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cachecontrol\RedisCache.cs" />
     <Compile Include="Class1.cs" />
+    <Compile Include="Encryption\Encryption.cs" />
     <Compile Include="Exceptions\ResultNotFoundException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LogManager.cs" />
