Added Subscription Controller Modified Posts Controles

--- a/WP.Business/WP.Business.csproj
+++ b/WP.Business/WP.Business.csproj
@@ -95,10 +95,12 @@
     <Compile Include="Classes\Misc\MiscBusiness.cs" />
     <Compile Include="Classes\PagesBusiness.cs" />
     <Compile Include="Classes\PostsBusiness.cs" />
+    <Compile Include="Classes\SubscriptionBusiness.cs" />
     <Compile Include="Interfaces\IAuthBusiness.cs" />
     <Compile Include="Interfaces\IBlogBusiness.cs" />
     <Compile Include="Interfaces\IPagesBusiness.cs" />
     <Compile Include="Interfaces\IPostsBusiness.cs" />
+    <Compile Include="Interfaces\ISubscriptionBusiness.cs" />
     <Compile Include="Interfaces\Misc\IMiscBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
