--- a/WebApp.API/WebApp.API.csproj
+++ b/WebApp.API/WebApp.API.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Controllers\MiscController.cs" />
     <Compile Include="Controllers\PageController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
+    <Compile Include="Controllers\SubscriptionController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
