--- a/WP.Repository/WP.Repository.csproj
+++ b/WP.Repository/WP.Repository.csproj
@@ -94,10 +94,12 @@
     <Compile Include="Classes\Misc\MiscRepository.cs" />
     <Compile Include="Classes\PagesRepository.cs" />
     <Compile Include="Classes\PostsRepository.cs" />
+    <Compile Include="Classes\SubscriptionRepository.cs" />
     <Compile Include="Interfaces\IAuthRepository.cs" />
     <Compile Include="Interfaces\IBlogRepository.cs" />
     <Compile Include="Interfaces\IPagesRepository.cs" />
     <Compile Include="Interfaces\IPostsRepository.cs" />
+    <Compile Include="Interfaces\ISubscriptionRepository.cs" />
     <Compile Include="Interfaces\Misc\IMiscRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -115,9 +117,7 @@
       <Name>WP.Utillities</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="NewFolder1\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('..\packages\NETStandard.Library.2.0.3\build\netstandard2.0\NETStandard.Library.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
