--- a/WebApp.API/Web.config
+++ b/WebApp.API/Web.config
@@ -10,12 +10,14 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="ConnectionString" value="server=localhost;user id=root;pwd=admin@123;persistsecurityinfo=False;port=9606;database=ProjectDB" />
-	<add key="RedisPort" value="6379"/>
-	<add key="RedisHost" value="121.0.0.1"/>
+	<add key="RedisPort" value="6379" />
+	<add key="RedisHost" value="121.0.0.1" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" requestValidationMode="2.0"/>
+    <pages validateRequest="false" />
+
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
