--- a/WebApp.API/WebApp.API.csproj
+++ b/WebApp.API/WebApp.API.csproj
@@ -262,6 +262,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Files\PostImages\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
