--- a/WP.Model/WP.Model.csproj
+++ b/WP.Model/WP.Model.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Models\PageModel.cs" />
     <Compile Include="Models\AttributesModel.cs" />
     <Compile Include="Models\PostsModel.cs" />
+    <Compile Include="Models\RolesModel.cs" />
     <Compile Include="Models\SubscriptionModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\LogManagerModel.cs" />
