Updated  Password check policy

--- a/WebApp.API/Web.config
+++ b/WebApp.API/Web.config
@@ -9,7 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ConnectionString" value="server=localhost;user id=root;pwd=admin@123;persistsecurityinfo=False;port=9606;database=ProjectDB" />
+    <!--<add key="ConnectionString" value="server=localhost;user id=root;pwd=admin@123;persistsecurityinfo=False;port=9606;database=ProjectDB" />-->
+    <add key="ConnectionString" value="server = 127.0.0.1;port=3306;uid=root;database=ProjectDB" />
 	<add key="RedisPort" value="6379" />
 	<add key="RedisHost" value="121.0.0.1" />
   </appSettings>
